--- a/index.html
+++ b/index.html
@@ -182,9 +182,11 @@
 
       let toggleBtn = document.querySelector(".toggle-button");
       let dropdown = document.querySelector(".dropdown-menu");
+      let icon = document.queryselector(".icon");
 
       toggleBtn.addEventListener("click", () => {
-      dropdown.classList.toggle('top-36');
+        dropdown.classList.toggle('top-36');
+        icon.classList.toggle('fa-xmark');
       })
 
     </script>
