--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
 
           <div class="dropdown-menu absolute -top-full left-0 max-lg:bg-[#ffffff] w-full flex flex-col items-center gap-6 py-6 text-lg lg:text-2xl text-gray-700 lg:text-lg font-semibold lg:font-semibold lg:static  lg:flex-row justify-between lg:justify-end lg:px-12">
             <ul class="flex flex-col items-center gap-8 lg:flex-row lg:gap-10">
-              <li class="hover:text-black"><a href="#">About</a></li>
-              <li class="hover:text-black"><a href="#">Services</a></li>
-              <li class="hover:text-black"><a href="#">Portfolio</a></li>
-              <li class="hover:text-black"><a href="#">Videos</a></li>
-              <li class="hover:text-black whitespace-nowrap"><a href="#">Ray's Tips</a></li>
-              <li class="hover:text-black"><a href="#">Quote</a></li>
+              <li class="text-black"><a href="#">Home</a></li>
+              <li class="hover:text-black"><a href="#About">About</a></li>
+              <li class="hover:text-black"><a href="#Services">Services</a></li>
+              <li class="hover:text-black"><a href="#Testimonials">Testimonials</a></li>
+              <li class="hover:text-black"><a href="#Gallery">Gallery</a></li>
             </ul>
           </div>
 
@@ -34,7 +33,7 @@
         </nav>
 
       </header>
-
+      <a href="" name="Home"></a>
       <div class=" px-10 py-24 lg:py-32 flex flex-col items-center justify-between gap-20 ">
         <span class="bg-[#FFFFFF99] text-lg font-semibold px-2 py-1 md:text-3xl lg:text-5xl">RAY ROMANO CONTRACTING</span>
         <p class="bg-[#FFFFFF99] px-2 py-1 text-base md:text-lg font-base md:font-lg text-justify lg:text-2xl lg:font-normal">Renovating apartments, town houses and vacation homes in New York City and the Hamptons for over 25 years.</p>
@@ -50,6 +49,7 @@
     </section>
 
     <section class="bg-[url(./assets/bi2.jpg)] w-full  bg-center bg-cover bg-fixed ">
+        <a href="" name="About"></a>
         <div class=" px-10 py-24 lg:py-32 flex flex-col items-center justify-between ">
             <div >
                 <h1 class="bg-[#FFFFFF99] text-lg font-medium px-2 py-1 md:text-4xl md:font-normal lg:text-6xl lg:font-normal ">EVERYBODY LOVES RAYMOND,<br> THE CONTRACTOR</h1>
@@ -65,6 +65,7 @@
     </section>
 
     <section class="bg-[url(./assets/bi3.jpg)] w-full  bg-center bg-cover bg-fixed ">
+        <a href="" name="Services"></a>
         <div class=" px-8 md:px-24 lg:px-28 py-24 lg:py-32 flex flex-col  ">
             <div class="flex items-start justify-start">
                 <h1 class="bg-[#FFFFFF99] text-2xl font-medium px-3 py-2 md:text-4xl md:font-normal lg:text-6xl md:font-semibold lg:font-semibold ">SERVICES</h1>
@@ -83,6 +84,7 @@
     </section>
 
     <section class="bg-[url(./assets/bi4.jpg)] w-full  bg-center bg-cover bg-fixed ">
+        <a href="" name="Testimonials"></a>
         <div class=" px-8 md:px-24 lg:px-28 py-24 lg:py-32 flex flex-col  ">
             <div class="flex items-start justify-start">
                 <h1 class="bg-[#FFFFFF99] text-2xl font-medium px-3 py-2 md:text-4xl md:font-normal lg:text-6xl md:font-semibold lg:font-semibold ">TESTIMONIALS
@@ -110,6 +112,7 @@
     </section>
 
     <section class="bg-[url(./assets/bi5.jpg)] w-full  bg-center bg-cover bg-fixed ">
+        <a href="" name="Gallery"></a>
         <div class=" px-8 md:px-24 lg:px-28 py-24 lg:py-32 flex flex-col  ">
             <div class="flex items-start justify-start">
                 <h1 class="bg-[#FFFFFF99] text-2xl font-medium px-4 py-3 md:text-4xl md:font-normal lg:text-6xl md:font-semibold lg:font-semibold ">Gallery</h1>
@@ -158,6 +161,10 @@
         
     </section>
 
+    <section class="max-w-[50px] mx-auto">
+        <a href="#Home"><span class=" bg-black text-white px-3 py-1 rounded-full"><button>Top <i class="fa-solid fa-arrow-up"></i></button></span></a>
+        
+    </section>
 
     <footer class="bg-black text-white">
         <div class="max-w-[1250px] mx-auto flex items-center justify-center md:gap-4 lg:gap-10 gap-3 md:flex-col lg:flex-row flex-col py-14">
@@ -175,6 +182,7 @@
             <p class="text-base">212-496-8102</p>
             <p class="text-base font-semibold">ray@rayromanocontracting.com</p>
         </div>
+        <p class="text-end px-28 pb-2 text-gray-500">&copy; AkashMailar, 2024</p>
     </footer>
 
 
