--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <p class="text-base">212-496-8102</p>
             <p class="text-base font-semibold">ray@rayromanocontracting.com</p>
         </div>
-        <p class="text-end px-28 pb-2 text-gray-500">&copy; AkashMailar, 2024</p>
+        <p class="text-end px-28 pb-2 text-gray-500 whitespace-nowrap">&copy; AkashMailar, 2024</p>
     </footer>
 
 
